Improved the way we add new lists in the HomePageViewModel

--- a/Randomizer/Randomizer/Pages/HomePage.xaml
+++ b/Randomizer/Randomizer/Pages/HomePage.xaml
@@ -54,7 +54,7 @@
                     <BoxView HeightRequest="2" Color="White" />
                 </StackLayout>
 
-                <ListView x:Name="collectionView"
+                <ListView
                     Grid.Row="1"
                     Margin="16"
                     ItemTemplate="{StaticResource listItemCardDTS}"
