Revert "- Removed the pencil icon"
This reverts commit 55322628dafb1d9a7c478ba5c3af7d2040144783.

--- a/Randomizer/Randomizer/Pages/ListEditionPage.xaml
+++ b/Randomizer/Randomizer/Pages/ListEditionPage.xaml
@@ -33,11 +33,21 @@
     <ContentPage.ToolbarItems>
 
         <Controls:ToolbarItem
+            Name="EditListMenuItem"
+            Command="{Binding EditListCommand}"
+            IconImageSource="edit_white.png"
+            IsVisible="{Binding IsEditMode, Converter={StaticResource reverseBoolConverter}}"
+            Order="Primary"
+            Priority="0"
+            Text="Edit"
+            ToolbarParent="{x:Reference this}" />
+
+        <Controls:ToolbarItem
             Name="DeleteListMenuItem"
             Command="{Binding DeleteListCommand}"
             IconImageSource="closed_circle_white.png"
             IsVisible="{Binding ShowDeleteListToolbarItem}"
-            Order="Secondary"
+            Order="Primary"
             Priority="1"
             Text="Delete"
             ToolbarParent="{x:Reference this}" />
@@ -46,6 +56,7 @@
             Name="SaveListMenuItem"
             Command="{Binding SaveListCommand}"
             IconImageSource="check_white.png"
+            IsVisible="{Binding IsEditMode}"
             Order="Primary"
             Priority="2"
             Text="Save"
@@ -60,6 +71,7 @@
             <Entry
                 FontSize="20"
                 HorizontalOptions="StartAndExpand"
+                IsVisible="{Binding IsEditMode}"
                 Placeholder="{i18:Translate ResourceKey=EnterListNamePlaceholder}"
                 PlaceholderColor="WhiteSmoke"
                 Text="{Binding ListVM.Name, Mode=TwoWay}"
@@ -81,6 +93,7 @@
                                 VerticalTextAlignment="Center" />
                             <Image
                                 Margin="8,0,0,0"
+                                IsVisible="{Binding BindingContext.IsEditMode, Source={x:Reference this}}"
                                 MinimumHeightRequest="32"
                                 Source="closed_circle_white.png"
                                 VerticalOptions="Center"
@@ -97,6 +110,7 @@
             <Entry
                 x:Name="ItemEntry"
                 HorizontalOptions="StartAndExpand"
+                IsVisible="{Binding IsEditMode}"
                 Placeholder="{i18:Translate ResourceKey=EnterAnItemPlaceholder}"
                 PlaceholderColor="WhiteSmoke"
                 ReturnCommand="{Binding AddItemCommand}"
@@ -119,6 +133,7 @@
                 BorderWidth="1"
                 Command="{Binding RandomizeCommand}"
                 HorizontalOptions="StartAndExpand"
+                IsVisible="{Binding IsEditMode, Converter={StaticResource reverseBoolConverter}}"
                 Text="{i18:Translate ResourceKey=RandomizeLabel}"
                 TextColor="White" />
 
