--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Pages/AppShellPage.xaml
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Pages/AppShellPage.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="Randomizer.AppShell"
+    x:Class="Randomizer.Pages.AppShellPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:Pages="clr-namespace:Randomizer.Pages"
